<resources>
    <string name="app_name">纺织品近红外光谱分析</string>
    <string name="welcome_message_on_homepage">纺织品近红外光谱分析</string>
    <string name="app_version_name">v0.9.1</string>
    <string name="pref_first_run">isFirstRun</string>
    <string name="pref_user_agreed">userAgreed</string>
    <string name="pref_user_phone_number">userPhoneNumber</string>
    <string name="pref_user_password">userPassword</string>
    <string name="pref_user_token">userToken</string>
    <string name="pref_user_ipAddress">userIp</string>
    <string name="pref_dev_login_bypass">developerLoginBypass</string>
    <string name="pref_device_battery">battery</string>
    <string name="pref_device_temperature">temperature</string>
    <string name="pref_device_humidity">humidity</string>
    <string name="pref_device_totalLampTime">totalLampTime</string>
    <string name="pref_app_reference_update_time">referenceUpdateTime</string>

    <string name="file_deviceItem">%s_deviceItem.ser</string>
    <string name="file_nirSpectralData">%s.ser</string>
    <string name="file_userSpectralFileMap">%1$s_%2$s_userSpectralFileMap.ser</string>
    <string name="file_localReferenceIntensity">%s_localReferenceIntensity.ser</string>


    <string name="user_agreement">用户协议</string>
    <string name="accept">同意并继续</string>
    <string name="cancel">取消</string>
    <string name="reject">不同意</string>
    <string name="login_in_title">登录</string>
    <string name="login">登录</string>
    <string name="login_asking">已经拥有账号？登录</string>
    <string name="register_title">注册</string>
    <string name="register_asking">还没有账号？注册</string>
    <string name="login_in_logo">纺织品近红外光谱预测</string>
    <string name="login_title">登录</string>
    <string name="phone_number">请输入手机号</string>
    <string name="phone_number_title">手机号</string>
    <string name="password">请输入密码</string>
    <string name="password_title">密码</string>
    <string name="forgot_password">忘记密码了？</string>
    <string name="developer_skip_login">开发者模式：跳过登录</string>
    <string name="developer_skip_login_title">启用开发者会话</string>
    <string name="developer_skip_login_message">此入口仅用于本地开发调试，将跳过验证码、登录接口和首次引导。是否继续？</string>
    <string name="phone_number_register">立即注册</string>
    <string name="or">或</string>
    <string name="sms_verification_code">请输入图形验证码</string>
    <string name="sms_verification_code_title">图形验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="check_code">请输入机身授权码</string>
    <string name="check_code_title">机身授权码</string>
    <string name="register_title_1">创建账户以继续</string>
    <string name="register_title_2">欢迎您的使用</string>
    <string name="verification_code_Description">请输入图形验证码</string>
    <string name="enter_verification_code">请输入图形验证码</string>
    <string name="confirm">提交</string>
    <string name="quit">退出</string>
    <string name="next_step">下一步</string>
    <string name="next_step_contentDescription">下一步</string>
    <string name="step_1_title">探索光谱的力量</string>
    <string name="step_1_content">欢迎使用先进的便携式近红外光谱仪。\n通过本应用，
        您可以轻松连接设备，实时获取和分析光谱数据，开启物质分析的新篇章。</string>
    <string name="step_1_image_contentDescription">探索光谱的力量</string>

    <string name="step_2_title">一触即连</string>
    <string name="step_2_content">快速连接您的近红外光谱仪。\n
        只需打开蓝牙，应用将搜索并连接到您的便携设备，确保您的数据采集无缝进行。</string>
    <string name="step_2_image_contentDescription">一触即连</string>

    <string name="step_3_title">掌握控制</string>
    <string name="step_3_content">熟悉您的光谱仪各部分。\n
        开关位于设备顶部，切换开启。让我们开始吧，从绑定设备开始，轻松测量，结果一目了然。</string>
    <string name="step_3_image_contentDescription">掌握控制</string>

    <string name="register_slogan">近红外光谱分析仪</string>
    <string name="start_binding">开始绑定设备</string>
    <string name="scanning_bluetooth_device">正在扫描蓝牙设备…</string>
    <string name="scanning_bluetooth_device_timeout_title">扫描超时</string>
    <string name="scanning_bluetooth_device_timeout_content">请检查设备的电源是否打开，然后返回重试</string>
    <string name="device_added_successfully">设备添加成功</string>
    <string name="device_added_successfully_content">设备%s已成功添加到设备列表</string>
    <string name="card_image_contentDescription">设备名</string>
    <string name="device_name">设备名称</string>
    <string name="device_type_nir">近红外光谱仪</string>
    <string name="device_title">设备列表</string>
    <string name="add_device">添加设备</string>
    <string name="new_scan_title">新的扫描</string>
    <string name="start_scan_button">开始扫描</string>
    <string name="select_device">选择设备</string>
    <string name="signal_strength">-99</string>
    <string name="mac_address">11:22:33:44:55:66</string>

    <string name="user_agreement_content">
<![CDATA[
<h1>用户协议</h1>
<p>感谢您选择纺织品近红外光谱分析应用程序（以下简称"本应用"）。在您使用本应用之前，请仔细阅读本用户协议（以下简称"协议"）中的条款和条件。通过下载、安装或使用本应用，您表示您接受本协议的条款。如果您不同意本协议的条款，请不要下载、安装或使用本应用。</p>

<h2>兼容性声明</h2>
<p>本应用已在以下智能手机上进行了测试：</p>
<ul>
<li>Samsung Galaxy S8+ (SM-G955FD), Android版本: 9</li>
<li>Redmi Note 9 Pro, Android版本: 11</li>
<li>Google Pixel 6a, Android版本: 13</li>
</ul>
<p>请注意，本应用的性能可能因设备而异，我们不能保证本应用在所有设备上的兼容性。</p>

<h2>许可证信息</h2>
<p>本应用使用了多个开源软件，包括但不限于由广检集团材料检测中心以及其他方提供的软件。这些软件均根据其各自的许可证发布。</p>

<h3>软件许可协议</h3>
<p>本应用包含的软件可能受到一种或多种开源许可证的保护，具体许可证信息包括但不限于BSD许可证、Apache许可证2.0等。使用本应用意味着您同意遵守这些许可证的条款。</p>

<h2>免责声明</h2>
<p>本应用及其包含的所有软件均按"现状"提供，不提供任何形式的明示或暗示保证。使用本应用的风险由您自行承担。在任何情况下，广检集团材料检测中心或本应用的开发者或贡献者均不对因使用或无法使用本应用造成的任何直接、间接、偶然、特殊、示范性或后果性损害负责。</p>

<h2>同意</h2>
<p>通过使用本应用，您表示您已阅读、理解并同意接受本协议的条款。我们保留随时修改本协议条款的权利，且无需另行通知。您继续使用本应用将被视为您接受了这些修改。</p>

<p>© 2023 广检集团材料检测中心。版权所有。</p>
]]>
</string>
    <string name="version_number">内测版本 v0.9.1</string>
    <string name="card_id">N/A</string>
    <string name="NA">N/A</string>
    <string name="device_information_dialog_device_name">设备名称：</string>
    <string name="device_information_dialog_device_name_hint">设备名称最长不超过10个字</string>
    <string name="device_information_dialog_device_info">设备信息：</string>
    <string name="device_information_dialog_device_type">设备类型：</string>
    <string name="device_details_connecting_device">点击更新光谱数据</string>
    <string name="battery_level">%s</string>
    <string name="not_available">N/A</string>
    <string name="light_usage_duration">*hr *min *sec</string>
    <string name="light_usage">光源通电时长：</string>
    <string name="remaining_battery_level">剩余电量</string>
    <string name="spectral_reference_update_date">光谱参比更新日期：</string>
    <string name="spectral_reference_update_time">参比更新时间</string>
    <string name="spectral_reference_update_date_value">N/A</string>
    <string name="spectral_reference_update_time_value">%s</string>
    <string name="number_of_spectra_collected">设备已保存光谱数量：</string>
    <string name="number_of_spectra_collected_value">N/A</string>
    <string name="preheat_light_source_switch">是否预热光源</string>
    <string name="preheat_toggle">预热光源</string>
    <string name="not_preheat_toggle">不预热光源</string>
    <string name="recent_spectral_data_list_empty">近期无光谱测量数据</string>
    <string name="scan_contentDescription">开始扫描</string>
    <string name="nano_confirmation_title">确定选择这个设备吗？</string>
    <string name="nano_confirmation_msg">请输入授权码以继续绑定设备\n%s</string>
    <string name="ok">确定</string>
    <string name="device_list_empty">设备列表为空</string>
    <string name="verification_dialog_title">请输入数字验证码</string>
    <string name="search">Search</string>
    <string name="main_ic_add_device">添加设备</string>
    <string name="main_tv_title">近期使用</string>
    <string name="main_tv_ad">最新消息</string>
    <string name="tv_devices_list">最近未使用任何设备</string>
    <string name="tv_nes_empty">暂无信息</string>
    <string name="not_connected_title">连接超时</string>
    <string name="not_connected_message">请确保设备的电源已经打开，然后重新尝试连接！</string>
    <string name="division_line">纵向分割线</string>
    <string name="back_button">返回按钮</string>
    <string name="back">返回</string>
    <string name="tv_scan_function_mode">采集模式</string>
    <string name="tv_scan_function_1">采集并预测</string>
    <string name="please_wait">请稍候…</string>
    <string name="please_wait_for_value">0 %</string>
    <string name="connecting_progress">%d %%</string>
    <string name="connected_to_the_device">已连接到设备…开始同步数据</string>
    <string name="device_connected">已完成设备连接</string>
    <string name="calibration_coefficient_receiving">校准系数接收中…%1$s/%2$s</string>
    <string name="calibration_matrix_receiving">校准矩阵接收中…%1$s/%2$s</string>
    <string name="calibration_coefficient_and_matrix_read_from_local">校准系数和矩阵已从本地缓存获取</string>
    <string name="calibration_coefficient_received">校准系数接收完成</string>
    <string name="calibration_matrix_received">校准矩阵接收完成</string>
    <string name="active_scan_config_receiving">活动扫描配置接收中…%1$s/%2$s</string>
    <string name="active_scan_config_read_from_local">活动扫描配置已从本地缓存获取</string>
    <string name="active_scan_config_received">活动扫描配置接收完成</string>
    <string name="device_activated">设备激活成功</string>
    <string name="scan_wave_length">%.2f</string>
    <string name="tab_reflectance">反射率</string>
    <string name="tab_absorbance">吸光度</string>
    <string name="tab_intensity">光强度</string>
    <string name="tab_Reference">参比</string>
    <string name="chart_no_data_text">无数据</string>

    <string name="device_connect_timeout">连接超时,请返回重试</string>
    <string name="troubleshooting_prompt_text_step_1">故障排查：\n检查设备底部电源开关是否移动至“ON”处</string>
    <string name="troubleshooting_prompt_text_step_2">故障排查：\n检查设备正面电源及蓝牙指示灯是否打开</string>
    <string name="troubleshooting_prompt_text_step_3">故障排查：\n检查手机蓝牙是否已经启动</string>
    <string name="connection_interruption_dialog_title">连接中断</string>
    <string name="connection_interruption_dialog_content">连接意外中断，请返回重试！</string>
    <string name="connection_successful_dialog_content">设备连接成功</string>
    <string name="connection_successful_dialog_title">连接成功</string>

    <string name="file_prefix">GTTC</string>
    <string name="device_information_cannot_be_obtained">无法获得设备信息，软件发生异常！</string>
    <string name="device_information_cannot_be_obtained_dialog_title">软件发生异常</string>
    <string name="confirm_update_local_reference_dialog_tile">请将\'参比白板\'置于采集口</string>
    <string name="confirm_update_local_reference_dialog_content">注意，此操作将显著影响光谱的准确性！\n请清洁采集口，并将参比白板置于采集口，确保稳定后点击\'继续\'。</string>
    <string name="button_continue">继续</string>
    <string name="reference_update_success_dialog_tile">参比更新成功</string>
    <string name="reference_update_success_dialog_content">本地参比更新成功，下一次扫描生效。</string>
    
    <string name="user_profile_account_icon_content_description">用户头像</string>
    <string name="user_profile_page_title">设置</string>
    <string name="user_profile_page_subtitle">管理设备、应用信息与账户</string>
    <string name="user_profile_back_content_description">返回</string>
    <string name="user_profile_welcome_title">欢迎回来</string>
    <string name="user_profile_product_name">纺织品近红外光谱分析</string>
    <string name="user_profile_account">账号  %s</string>
    <string name="user_profile_item_logout">退出登录</string>
    <string name="user_profile_item_device_manage">设备管理</string>
    <string name="user_profile_item_about">关于</string>
    <string name="imageview_default_description">背景</string>
    <string name="result_title">参考预测结果(共%s条)</string>
    <string name="scan_result_list">%1$s.%2$s:%3$s</string>
    <string name="ib_predict_result_save_contentDescription">保存光谱及预测结果</string>
    <string name="storage_spectrum_reach_maximum">本地保存光谱数据即将到达上限，当前(%1$s/%2$s)</string>
    <string name="storage_spectrum_reached_maximum_1">本地保存光谱数据已达上限，当前(%1$s/%2$s)</string>
    <string name="storage_spectrum_reached_maximum_2">保存当前光谱将会导致最早保存光谱被删除</string>
    <string name="spectrum_date">采集日期：%s</string>
    <string name="spectrum_predict_result">结果参考：%s</string>
    <string name="spectrum_predict_result_arrow_right">右侧箭头</string>
    <string name="spectrum_predict_result_preview">采集时间：%1$s\n预测结果：%2$s</string>
</resources>
