<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/nano_confirmation_title"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_dialog_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_weight="1"
        android:text="@string/nano_confirmation_msg"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/check_code"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="@drawable/input_field"
        android:drawableRight="@drawable/outline_qrcode_scan_24"
        android:drawablePadding="20dp"
        android:hint="@string/check_code"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/accept_button"
            android:text="@string/cancel" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/accept_button"
                android:text="@string/confirm" />

            <ProgressBar
                android:id="@+id/button_confirm_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/white"
                android:visibility="invisible" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>