<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="12dp"
    android:background="@drawable/rounded_rectangle_for_devices_card"
    android:elevation="4dp">

    <TextView
        android:id="@+id/card_id"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="-12dp"
        android:alpha="0.08"
        android:gravity="center"
        android:text="@string/card_id"
        android:textColor="@color/gray"
        android:textSize="128sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_device_image"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_device_image" />

    <ImageView
        android:id="@+id/main_device_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/card_image_contentDescription"
        android:scaleType="fitCenter"
        android:src="@drawable/equipment_front"
        app:layout_constraintBottom_toTopOf="@+id/tv_main_nano_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_nano_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:maxWidth="180dp"
        android:text="@string/device_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_device_image" />

    <TextView
        android:id="@+id/tv_main_nano_mac"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/mac_address"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_nano_name" />

    <TextView
        android:id="@+id/card_main_device_type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:maxWidth="180dp"
        android:text="@string/device_type_nir"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_nano_mac" />

</androidx.constraintlayout.widget.ConstraintLayout>