<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAgreementActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">
            <TextView
                android:id="@+id/tv_user_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </ScrollView>
        <Button
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/accept_button"
            android:text="@string/accept" />
        <Button
            android:id="@+id/btn_reject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/gray"
            android:alpha="0.8"
            android:text="@string/reject" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>