<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient"
    tools:context=".guidingSteps.FirstStepAragment">
    <com.gttcgf.nanoscan.MovingSpotsView
        android:id="@+id/movingSpotsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/step_1_image_contentDescription"
        app:layout_constraintVertical_weight="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/step_1_title"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/step_1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/step_1_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="14sp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/step_1_title"/>
    <TextView
        android:id="@+id/step_1_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="128sp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:text="@string/step_1_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>