<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="12dp"
    android:background="@drawable/rounded_rectangle">

    <TextView
        android:id="@+id/scan_result_card_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.15"
        android:text="@string/card_id"
        android:textColor="@color/gray"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/spectrum_date"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/tv_predict_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_predict_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal|top"
        android:text="@string/spectrum_predict_result"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

</androidx.constraintlayout.widget.ConstraintLayout>